<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StartActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:fontFamily="@font/avatarock"
        android:textStyle="bold"
        android:textSize="42sp" />

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp">

        <TableRow android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/pink"
                android:contentDescription="@string/pink_ball_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/pink_point"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/orange"
                android:contentDescription="@string/orange_ball_text"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/orange_point"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />
        </TableRow>

        <TableRow
            android:layout_marginTop="20dp"
            android:gravity="center">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/black"
                android:contentDescription="@string/black_ball_text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/game_over_text"
                android:textSize="18sp"
                tools:ignore="RtlSymmetry" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/startGameButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:padding="20dp"
        android:text="@string/start_text"
        android:textColor="#FFFFFF"
        app:cornerRadius="50dp" />

</LinearLayout>